--- a/cargos/templates/cargos/index.html
+++ b/cargos/templates/cargos/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
 
@@ -13,7 +13,7 @@
 
 {% include "modal_delete.html" %}
 
-<a href="/pacientes/create" class="btn btn-info btn-fill pull-right mb-3">Cadastrar</a>
+<a href="{%  url 'cargos_create'  %}" class="btn btn-info btn-fill pull-right mb-3">Cadastrar</a>
 
 <div class="card">
     <div class="card-body">
@@ -29,27 +29,26 @@
      <thead>
          <tr>
              <th scope="col">#</th>
-             <th scope="col">Nome</th>
-             <th scope="col">Email</th>
-             <th scope="col">Telefone</th>
-             <th scope="col">Ações</th>
+             <th scope="col">Descrição</th>
+
+
          </tr>
      </thead>
      <tbody>
 
-         {% for paciente in pacientes %}
+         {% for cargo in cargos %}
 
          <tr>
-             <td>{{ paciente.nome }}</td>
-             <td>{{ paciente.nome }}</td>
-             <td>{{ paciente.email }}</td>
-             <td>{{ paciente.telefone }}</td>
+             <td>{{ cargo.descricao }}</td>
+
+
+
              <td>
-                <a title="Editar"  href="{%  url 'paciente_edit' paciente.id %} "  class="fa fa-edit " ></a>
+                <a title="Editar"  href="{%  url 'cargos_edit' cargo.id %} "  class="fa fa-edit " ></a>
                 <a title="Excluir"
                    href="#"
                    class="fa fa-trash deleteRegister"
-                   data-delete="{%  url 'paciente_delete' paciente.id %}"
+                   data-delete="{%  url 'cargos_delete' cargo.id %}"
                    data-toggle="modal"
                    data-target="#deleteModal" >
                 </a>
