--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -13,6 +13,13 @@
         </li>
 
         <li>
+            <a class="nav-link" href="{%  url 'colaboradores_home' %}">
+                <i class="fa fa-user-plus"></i>
+                <p>Colaboradores</p>
+            </a>
+        </li>
+
+        <li>
             <a class="nav-link" href="{%  url 'pacientes_home' %}">
                 <i class="fa fa-user-plus"></i>
                 <p>Pacientes</p>
